16 Aprile Update V2 - Throw Weapon