@@ -122,7 +122,7 @@ public class ClassPg {
     public Armi getWeaponByName(String name){
         /* mi aspetto che il nome dell'arma sia univoco e che sia il primo della lista dopop il fetch */
         List<Armi> armi = this.Weapons.stream().filter(weapon -> weapon.getName().equals(name)).collect(Collectors.toList());
-        return armi.getFirst();
+        return armi.get(0);
     }
 
     /* Getter Property */
